# ngrex

./: .gitignore  AGENT.md  AGENTS.md  README.md  pyproject.toml
docs/artifacts/: DISCOVERY_CHECKLIST.md  SPEC.md  TASK_GRAPH.md
docs/artifacts/task_implementations/TASK-001/: TASK_IMPLEMENTATION.md
docs/artifacts/task_implementations/TASK-002/: TASK_IMPLEMENTATION.md
src/ngrex/: __init__.py  __main__.py
src/ngrex/agents/: __init__.py
src/ngrex/cli/: __init__.py  main.py
src/ngrex/orchestrator/: __init__.py
src/ngrex/shared/: __init__.py  artifacts.py  clarifications.py  enums.py  rendering.py  run_state.py  task_graph.py
src/ngrex/storage/: __init__.py
system/: DISCOVERY.AGENT.md  IMPLEMENTATION.AGENT.md  INTEGRATION.AGENT.md  PLANNER.AGENT.md  SPECIFICATION.AGENT.md
tests/: test_scaffold.py  test_shared_contracts.py
