[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ngrex"
version = "0.1.0"
description = "Multi-agent software delivery system with a Python-first artifact pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
ngrex = "ngrex.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ngrex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

